--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,13 @@
+2009-05-06 ckuhl    <ckuhl@ipb-halle.de>
+        * bump for devel 2.5
+2009-03-30 ckuhl    <ckuhl@ipb-halle.de>
+        * add combine_xsanno
+        * small refactoring
+        * changes in scoring schemata
+2009-03-18 ckuhl	<ckuhl@ipb-halle.de>
+	* after groupCorr every peak is now member of a group
+        * bugfix: remove xM-xH clones
+        * remove dependency on Hmisc
 2009-03-10 ckuhl	<ckuhl@ipb-halle.de>
 	* speed-up of findAdducts
 2009-02-24 ckuhl        <ckuhl@ipb-halle.de>
@@ -13,12 +23,7 @@
 	* add lists for fragments, ions and neutral losses
 2008-10-15  ckuhl	<ckuhl@ipb-halle.de>
 	* Lot of bugfixes and speed up the correlation
-
 2008-10-13  ckuhl	<ckuhl@ipb-halle.de>
 	* First build for version 0.1.1
-
 2007-10-12  sneumann  <sneumann@ipb-halle.de>
-
 	* Inital release & collection of stuff
-
-	
