Added first visualisation. Works, but R CMD check complains
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@39642 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2009-05-22 Steffen Neumann <sneumann@@ipb-halle.de>
+        * Add first visualisation function plotEICs()
 2009-05-06 ckuhl    <ckuhl@ipb-halle.de>
         * bump for devel 2.5
 2009-03-30 ckuhl    <ckuhl@ipb-halle.de>
