Fixed manpage and vignette, passing R CMD check
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@39645 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/CAMERA.Rnw
+++ b/inst/doc/CAMERA.Rnw
@@ -324,6 +324,14 @@ an   <- groupFWHM(an)
 plotEICs(an, xr, pspecIdx=c(1))
 @
 
+\begin{figure}
+\begin{center}
+\includegraphics{CAMERA-EICPspec1}
+\end{center}
+\caption{\label{EICpspec1} EICs.}
+\end{figure}
+
+
 \section{Examples using CAMERA test dataset}
 \label{section:example}
 %{{{
