--- a/inst/doc/CAMERA.Rnw
+++ b/inst/doc/CAMERA.Rnw
@@ -331,6 +331,17 @@ plotEICs(an, xr, pspecIdx=c(1))
 \caption{\label{EICpspec1} EICs.}
 \end{figure}
 
+<<Pspec1, include = FALSE, fig = TRUE, eps = FALSE, width = 5, height = 4>>=
+plotPeaks(an, pspec=1, maxlabel=5)
+@
+
+\begin{figure}
+\begin{center}
+\includegraphics{CAMERA-Pspec1}
+\end{center}
+\caption{\label{EICpspec1} Spectra.}
+\end{figure}
+
 
 \section{Examples using CAMERA test dataset}
 \label{section:example}
