Add adduct labels to plotPeaks()
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@39905 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/CAMERA.Rnw
+++ b/inst/doc/CAMERA.Rnw
@@ -321,6 +321,7 @@ xr   <- xcmsRaw(file)
 xs   <- xcmsSet(c(file), method="centWave", ppm=30, peakwidth=c(5,10))
 an   <- xsAnnotate(xs)
 an   <- groupFWHM(an)
+an   <- findAdducts(an, polarity="positive")
 plotEICs(an, xr, pspecIdx=c(1))
 @
 
