Added maxlabel to plotEICs()
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@39910 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,6 @@
 2009-06-03 Steffen Neumann <sneumann@@ipb-halle.de>
         * Add adduct labels to plotPeaks()
+        * Add adduct labels to plotEICs()
 2009-05-22 Steffen Neumann <sneumann@@ipb-halle.de>
         * Add first visualisation function plotEICs() and plotPeaks()
 2009-05-06 ckuhl    <ckuhl@ipb-halle.de>
