--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2009-08-12 Steffen Neumann <sneumann@@ipb-halle.de>
+	* Fixed plotEICs for 1 peak groups
 2009-06-03 Steffen Neumann <sneumann@@ipb-halle.de>
         * Add adduct labels to plotPeaks()
         * Add adduct labels to plotEICs()
