Signed-off-by: ckuhl <ckuhl@vogt.ipb-sub.ipb-halle.de>
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@45289 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2009-11-24 ckuhl <ckuhl@ipb-halle.de>
+        * Add experimental parallel mode with MPI
 2009-11-20 ckuhl <ckuhl@ipb-halle.de>
         * Fix bug in setting ruletable
 2009-08-26 ckuhl <ckuhl@ipb-halle.de>
