Prerelease for next BioC release Hugh changes in CAMERA for work with multiple sample See functions manpages for parameter changes
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@45304 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2010-03-17 ckuhl <ckuhl@ipb-halle.de>
+	* Hugh changes in CAMERA for working with multiple sample
+	* Add check constrains in groupCorr for isotopes and primary adducts
 2009-11-24 ckuhl <ckuhl@ipb-halle.de>
         * Add experimental parallel mode with MPI
 2009-11-20 ckuhl <ckuhl@ipb-halle.de>
