Fix bug in annotate function
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@46254 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2010-04-20 ckuhl <ckuhl@ipb-halle.de>
+        * Fix bug in annotate function
 2010-04-19 ckuhl <ckuhl@ipb-halle.de>
 	* Last changes for the next BioC release
 	* Rewrite of the vignette
