--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2010-11-10 ckuhl <ckuhl@ipb-halle.de>
+	* Rewrite Vignette
 2010-29-09 ckuhl <ckuhl@ipb-halle.de>
     	* Add function findNeutralLoss and findNeutralLossSpecs
 2010-20-09 ckuhl <ckuhl@ipb-halle.de>
