--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,5 +1,8 @@
+2010-08-11 ckuhl <ckuhl@ipb-halle.de>
+	* Additional bugfix for findIsotopes. Could occur with 1.7.1, that all isotopes will be deleted.
 2010-01-11 ckuhl <ckuhl@ipb-halle.de>
 	* Fix bug in findIsotopes. Occurs if the first isotope peak, could be assigned from two different monoisotopic peaks.
+	* Reduce slightly the number of found isotopes
 2010-11-10 ckuhl <ckuhl@ipb-halle.de>
 	* Rewrite Vignette
 2010-29-09 ckuhl <ckuhl@ipb-halle.de>
