--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,4 +1,6 @@
 2010-08-11 ckuhl <ckuhl@ipb-halle.de>
+	* Add intval parameter to groupFWHM and findIsotopes
+2010-08-11 ckuhl <ckuhl@ipb-halle.de>
 	* Change getPeaklist to S4 Methods.
 	* Add getPeaklist parameter intval, where the intensity value can be selected
 2010-08-11 ckuhl <ckuhl@ipb-halle.de>
