Fix Bug in findAdducts if running in parallel mode
Signed-off-by: ckuhl <ckuhl@vogt.ipb-sub.ipb-halle.de>

git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@51021 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2010-23-11 ckuhl <ckuhl@ipb-halle.de>
+	* Fix bug in findAdducts. Function failed, if run in parallel mode.
 2010-08-11 ckuhl <ckuhl@ipb-halle.de>
 	* Add intval parameter to groupFWHM and findIsotopes
 2010-08-11 ckuhl <ckuhl@ipb-halle.de>
