Fix Bug if mz vector in findAdducts has only NA values
Signed-off-by: ckuhl <ckuhl@ender.ipb-sub.ipb-halle.de>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@53435 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2011-04-04 ckuhl <ckuhl@ipb-halle.de>
+	* Fix bug in findAdducts, if pseudospectrum mass list has only NA values
 2010-23-11 ckuhl <ckuhl@ipb-halle.de>
 	* Fix bug in findAdducts. Function failed, if run in parallel mode.
 2010-08-11 ckuhl <ckuhl@ipb-halle.de>
