--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2011-22-08 ckuhl <ckuhl@ipb-halle.de>
+  * Version 1.9.6
+  * Bugfix in plotEICs (Error in pks[, 1] : incorrect number of dimensions)
 2011-02-08 ckuhl <ckuhl@ipb-halle.de>
   * Version 1.9.5
   * Bugfix for findIsotopes if ppm was very high it could occur that one peak is assigned as two or more isotope peaks
