--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2011-20-10 ckuhl <ckuhl@ipb-halle.de>
+  * Version 1.9.8
+  * Correct rule table extended_adducts_pos.csv (typo in proton mass)
 2011-23-09 ckuhl <ckuhl@ipb-halle.de>
   * Version 1.9.7
   * Bugfix in calcIsotopes, causes groupCorr with calcIso to crash with (Error in rbind(resMat ...)
