added some "drop=FALSE" to fix "Error in isomatrix[, 1] : incorrect number of dimensions" error
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@59653 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2011-20-25 <rtautenh@scripps.edu>
+  * Version 1.9.9
+  * added some "drop=FALSE" to fix "Error in isomatrix[, 1] : incorrect number of dimensions" error
 2011-20-10 ckuhl <ckuhl@ipb-halle.de>
   * Version 1.9.8
   * Correct rule table extended_adducts_pos.csv (typo in proton mass)
