Add missing Rd-page for combinexsAnnos
Signed-off-by: ckuhl <ckuhl@vogt.ipb-sub.ipb-halle.de>

git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@61283 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2011-12-12 <ckuhl@ipb-halle.de>
+  * Version 1.11.4
+  * Add missing Rd page combinexsAnnos
 2011-29-11 <ckuhl@ipb-halle.de>
   * Version 1.11.3
   * Add new function combinexsAnnos. It allows checking and reannotation of sample with a coressponding sample from the opposite ion mode
