--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2012-03-19 <ckuhl@ipb-halle.de>
+ * Version 1.11.9
+ * Bugfix in findAdducts, where adduct annotation filtering was to stringent, if ips score is higher 1.5
 2012-02-29 <ckuhl@ipb-halle.de>
  * Version 1.11.8
  * Bugfix in findAdducts parallel mode, where wrong psgrp indices were stored in annoGrp
