Bugfix for findIsotopes to fix not consecutive isotope label like [M]+,[M+2]+ without [M+1]+
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@65083 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,6 @@
+2012-04-12 <ckuhl@ipb-halle.de>
+ * Version 1.13.1
+ * Bugfix for findIsotopes to fix not consecutive isotope label like [M]+,[M+2]+ without [M+1]+
 2012-03-19 <ckuhl@ipb-halle.de>
  * Version 1.11.10
  * Bugfix in groupCorr, where the function throws an error if argument xraw is not null
