--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+2012-06-11 <ckuhl@ipb-halle.de>
+ * Version 1.13.4
+ * Add ByteCompile: TRUE
+ * Bugfix for findIsotopes, clears subscript out of bound error
 2012-05-25 <ckuhl@ipb-halle.de>
  * Version 1.13.2
  * First changes for improved isotope detection
