Bugfix in findIsotopes, clears 'vec' must be sorted non-decreasingly error
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@66625 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,5 @@
+2012-06-12 <ckuhl@ipb-halle.de>
+ * Bugfix in findIsotopes, clears 'vec' must be sorted non-decreasingly error
 2012-06-11 <ckuhl@ipb-halle.de>
  * Version 1.13.4
  * Add ByteCompile: TRUE
