Bugfix for combinexsAnnos, clears "subscript out of bounds" error
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@67623 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -3,6 +3,7 @@ CHANGES IN VERSION 1.13.6
 BUG FIXES in 1.13.6
 
   * Fixed problem in findAdducts where higher nM+x annotations were erroneous deleted
+  * Fixed problem in combinexsAnnos, which produces a "subscript out of bounds " error
 
 CHANGES IN VERSION 1.13.5
 
