--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+CHANGES IN VERSION 1.13.7
+
+BUG FIXES in 1.13.7
+
+  * Fixed problem in findIsotopes with a previous grouped single sample xcmsSet
+
 CHANGES IN VERSION 1.13.6
 
 BUG FIXES in 1.13.6
