--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,13 @@
+CHANGES IN VERSION 1.13.9
+
+VISIBLE CHANGES in 1.13.9
+
+  * findNeutralLossSpecs and findNeutral now accepts multiple masses and use correctly the ppm error
+
+BUG FIXES in 1.13.9
+
+  * Memory fix in groupCorr if all peaks are contained in one group.
+
 CHANGES IN VERSION 1.13.8
 
 Visible Changes in 1.13.8
