Small changes in the vignette
Signed-off-by: Carsten Kuhl <ckuhl@schur.ipb-sub.ipb-halle.de>

git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@71263 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/doc/CAMERA.Rnw
+++ b/inst/doc/CAMERA.Rnw
@@ -121,7 +121,7 @@ The \Rclass{xcmsSet} was created as shown in section \ref{preprocess}.
 \begin{verbatim}
   # Create an xsAnnotate object
   an   <- xsAnnotate(xs)
-  # Group after RT
+  # Group based on RT
   anF  <- groupFWHM(an, perfwhm = 0.6)
   # Annotate isotopes
   anI  <- findIsotopes(anF, mzabs = 0.01)
