--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,12 @@
+CHANGES IN VERSION 1.15.4
+
+  * findKendrickMass() now allows negative retention time windows,
+    essentially allowing homologous series of losses
+
+CHANGES IN VERSION 1.15.3
+
+CHANGES IN VERSION 1.15.2
+
 CHANGES IN VERSION 1.15.1
 
 BUG FIXES IN 1.15.1
