Add changes for 1.15.5
git-svn-id: file:///home/git/hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@74552 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,7 @@
+CHANGES IN VERSION 1.15.5
+
+  * MPI Version of findAdducts() should now consume a lot less memory then before
+
 CHANGES IN VERSION 1.15.4
 
   * findKendrickMass() now allows negative retention time windows,
