Fix a bug with imports from the igraph package. It exported a groups function with conflicts with the groups methods from xcms. This is cleared. Raise version to 1.25.1
git-svn-id: https://hedgehog.fhcrc.org/bioconductor/trunk/madman/Rpacks/CAMERA@105914 bc3139a8-67e5-0310-9ffc-ced21a209358

--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,11 @@
+CHANGES IN VERSION 1.25.1
+-------------------------
+
+BUG FIXES
+
+    o Fix the import of the igraph methods, because it also exported a groups function. Solves the error "Error in x$membership : $ operator not defined for this S4 class"
+
+
 CHANGES IN VERSION 1.23.2
 -------------------------
 
