--- a/inst/NEWS
+++ b/inst/NEWS
@@ -2,6 +2,13 @@ CHANGES IN VERSION 1.25.3
 -------------------------
 BUG FIXES
 
+    o Disabled Rmpi support and usage in the unit tests, 
+      which lead to timeouts on BioC build farm
+
+CHANGES IN VERSION 1.25.3
+-------------------------
+BUG FIXES
+
     o Fix parallel processing with SNOW
 
 CHANGES IN VERSION 1.25.2
