--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,9 @@
+CHANGES IN VERSION 1.27.2
+-------------------------
+BUG FIXES
+
+    o Fix imports in DESCRIPTION to avoid igraph overwriting xcms::group()
+
 CHANGES IN VERSION 1.25.3
 -------------------------
 BUG FIXES
