--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.29.1
+-------------------------
+
+NEW FEATURES:
+
+    o Added function findIsotopesWithValidation 
+
 CHANGES IN VERSION 1.27.2
 -------------------------
 BUG FIXES
