--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.29.2
+-------------------------
+
+BUG FIXES
+
+    o Fix build issues and Vignette encoding
+
 CHANGES IN VERSION 1.29.1
 -------------------------
 
