--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.33.3
+-------------------------
+
+BUG FIXES
+
+    o Fix getPeaklist not pulling rownames correctly, closing #22, thanks to Jan Stanstrup
+
 CHANGES IN VERSION 1.33.2
 -------------------------
 
