Fix duplicate vignette name

--- a/vignettes/compoundQuantilesVignette.Rnw
+++ b/vignettes/compoundQuantilesVignette.Rnw
@@ -1,4 +1,4 @@
-%\VignetteIndexEntry{Isotope pattern validation with CAMERA}
+%\VignetteIndexEntry{Atom count expectations with compoundQuantiles}
 %\VignetteKeywords{CAMERA}\\
 %\VignettePackage{CAMERA}\\
 
