--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.39.2
+-------------------------
+
+BUG FIXES
+
+    o Fix duplicate vignette name
+
 CHANGES IN VERSION 1.33.3
 -------------------------
 
