--- a/vignettes/IsotopeDetectionVignette.Rnw
+++ b/vignettes/IsotopeDetectionVignette.Rnw
@@ -52,17 +52,24 @@ Fourth, we detect isotope clusters in each pseudospectrum using the proposed iso
   
   ## raw data file
   mzdatapath <- file.path(find.package("msdata"), "microtofq")
-  file <- list.files(path = mzdatapath, pattern = "^.*\\.mzdata$", all.files = TRUE, full.names = TRUE, recursive = FALSE, ignore.case = FALSE, include.dirs = FALSE, no.. = TRUE)[[1]]
+  file <- list.files(path = mzdatapath, pattern = "^.*\\.mzdata$",
+                     all.files = TRUE, full.names = TRUE, 
+		     recursive = FALSE, ignore.case = FALSE, 
+		     include.dirs = FALSE, no.. = TRUE)[[1]]
   
-  ## peak picking using centWave in combination with an additional peak picking step targeting on isotopes
+  ## peak picking using centWave in combination with an 
+  ## additional peak picking step targeting on isotopes
   xs   <- xcmsSet(
-    files=file, method="centWaveWithPredictedIsotopeROIs", ppm=10, peakwidth=c(5,12), snthresh=25, prefilter=c(3,200)
+    files=file, method="centWaveWithPredictedIsotopeROIs",
+    ppm=10, peakwidth=c(5,12), snthresh=25, prefilter=c(3,200)
   )
   
   ## create pseudospectra and perform isotope clster detection
   an   <- xsAnnotate(xs, polarity="positive")    # constructor; extracts peak table
   an   <- groupFWHM(an, perfwhm = 1)     # group peaks by retention time
-  an   <- findIsotopesWithValidation(object = an, ppm = 10, mzabs = 0.01, intval="intb", maxcharge = 3)  # annotate isotopic peaks
+  an   <- findIsotopesWithValidation(object = an, ppm = 10,
+                                     mzabs = 0.01, intval="intb",
+				     maxcharge = 3)  # annotate isotopic peaks
   
   ## extract annotated peak table
   peakTable <- getPeaklist(an)   # extract peak list
