--- a/inst/NEWS
+++ b/inst/NEWS
@@ -1,3 +1,10 @@
+CHANGES IN VERSION 1.43.1
+-------------------------
+
+BUG FIXES
+
+    o Improve vignette layout and fix typos, thanks to Anton Nikolas Waniek
+
 CHANGES IN VERSION 1.41.1
 -------------------------
 
